--- a/facebook-filter-extension/popup.html
+++ b/facebook-filter-extension/popup.html
@@ -21,10 +21,10 @@
   <div class="section">
     <h3>Belief Filters</h3>
     <label>Include Beliefs:</label>
-    <textarea id="includeBeliefs" placeholder="Keywords separated by commas that you want"></textarea>
+    <textarea id="includeBeliefs" placeholder="Explain naturally what you want to see"></textarea>
     
     <label>Exclude Beliefs:</label>
-    <textarea id="excludeBeliefs" placeholder="Keywords separated by commas that you don't want"></textarea>
+    <textarea id="excludeBeliefs" placeholder="Explain naturally what you don't want to see"></textarea>
   </div>
 
   <div class="section">
